--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <br>
            
-            <a href="#" class="btn">Download CV</a>
+            <a href="https://alimentandoelcambio.es/nutricion-y-salud/como-tener-una-relacion-saludable-con-la-comida/#:~:text=La%20relaci%C3%B3n%20saludable%20con%20la,m%C3%A1s%20que%20incluyen%20este%20concepto." class="btn">Conoce más</a>
         </div>
 
         <div class="home-img">
@@ -59,7 +59,7 @@
         <div class="about-content">
             <h2 class="heading"> ¿Por qué es importante?</h2>
             <p> Tener una buena relación con la comida es fundamental por varias razones, por una parte está la salud física ya que esto te ayudara a prevenir enfermedades y tener la energía necesaria para tu día a día. Por otro lado está el bienestar emocional que es igual de importante al físico, ya que sentirse bien con lo que comemos y cómo nos alimentamos contribuye a una mejor autoestima y aceptación personal. </p>
-            <a href="#" class="btn">Read More</a>
+            <a href="https://alimentandoelcambio.es/nutricion-y-salud/como-tener-una-relacion-saludable-con-la-comida/#:~:text=La%20relaci%C3%B3n%20saludable%20con%20la,m%C3%A1s%20que%20incluyen%20este%20concepto." class="btn">Read More</a>
         </div>
     </section>
     
@@ -77,7 +77,7 @@
                 <br>
                 <br>
                 <br>
-                <a href="#" class="btn">Read More</a>
+                <a href="https://www.psania.com/relacion-sana-con-la-comida/" class="btn">Read More</a>
             </div>
 
             <div class="service-box">
@@ -91,7 +91,7 @@
                 <i class="fa-solid fa-heart"></i>
                 <h3>No utilices la comida como consuelo emocional</h3>
                 <p> Aunque ocasionalmente es normal comer por razones emocionales, no debes utilizar la comida como tu principal mecanismo de afrontamiento para lidiar con emociones negativas.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="https://www.psania.com/relacion-sana-con-la-comida/" class="btn">Read More</a>
             </div>
         </div>
     </section>
@@ -105,7 +105,7 @@
                 <div class="portfolio-layer">
                     <h4>Hidratate</h4>
                     <p>Bebe entre uno y dos litros de agua al día.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+
                 </div>
             </div>
 
@@ -114,7 +114,7 @@
                 <div class="portfolio-layer">
                     <h4>Establece horarios de alimentación</h4>
                     <p>Cada 3 a 4 horas, respetando los tiempos de cada comida.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+
                 </div>
             </div>
 
@@ -123,7 +123,7 @@
                 <div class="portfolio-layer">
                     <h4>Consume frutas y verdura</h4>
                     <p>Todos los dias debes de consumir almenos una de cada una de estas, te aportaran vitaminas y fibra.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+
                 </div>
             </div>
 
@@ -132,7 +132,7 @@
                 <div class="portfolio-layer">
                     <h4>Reduce el azucar y la sal</h4>
                     <p> Limita el consumo de azúcares añadidos y sal. </p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+
                 </div>
             </div>
 
@@ -141,7 +141,7 @@
                 <div class="portfolio-layer">
                     <h4>Modera el consumo de alcohol</h4>
                     <p> Si consumes alcohol, hazlo con moderación.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+  
                 </div>
             </div>
 
@@ -150,7 +150,7 @@
                 <div class="portfolio-layer">
                     <h4>Disfruta del momento</h4>
                     <p> Come despacio y disfruta de cada bocado.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+
                 </div>
             </div>
 
